--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <h1> This is my first official website</h1>
 <p>  Why hello this my first official website as of right now there is nothng to do here but there will be in the future.</p>
+<button type="button" onclick="open.Window()">Click Me!</button>
 
 </body>
 </html>
