--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <h1> This is my first official website</h1>
 <p>  Why hello this my first official website as of right now there is nothing to do here but there will be in the future.</p>
-<button type="button" onclick="alert('Hello')">Click Me!</button>
-<a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">My cookie clicker website</a>
+<a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">My cookie clicker website
+<button> Cookie clicker </button>
+</a>
 </body>
 </html>
