--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <body>
 
 
-<h1> This is my first official website</h1>
-<p>  Why hello this my first official website as of right now there is nothing to do here but there will be in the future.</p>
-<a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">My cookie clicker website
-<button> Cookie clicker </button>
+<h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
+<p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
+<a href="https://funneljai212.github.io/cookie_clicker_2.048/">
+  <button>Cookie clicker</button>
 </a>
 </body>
 </html>
