--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </a>
 <p> This the link to my remake of a gameboy advance website</p>
   <a href="https://funneljai1.github.io/gba/">
-  <button style="color:DodgerBlue;">Cookie clicker website</button>
+  <button style="color:DodgerBlue;"> GBA website</button>
 </a>
 </body>
 </html>
