--- a/img/img.html
+++ b/img/img.html
@@ -1,1 +1,13 @@
-h
+<!DOCTYPE html>
+<html>
+<body>
+<style>
+body {
+  background-image: url('bgBlue.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
+</body>
+</html>
