--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="/__ovh_icons/image2.gif" alt="[IMG]"> <a href="bgBlue.jpg">bgBlue.jpg</a>
+<style>
+body {
+  background-image: url('bgBlue.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 <h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
   <p> This the link to my remake of cookie clicker</p>
