--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <body>
 <style>
 body {
-  background-image: url('bgBlue.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
+  background-image: url("https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg");
 }
 </style>
+</head>
+<body>
 <h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
   <p> This the link to my remake of cookie clicker</p>
