--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<head>
 <style>
 body {
   background-image: url("https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg");
