--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
 <head>
 <style>
 body {
-  background-image: url("https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg");
+img 
 }
 </style>
 </head>
