--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body background="https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg";>
+<head>
+<style>
+body {
+   background-image: url("https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-attachment: fixed;
+} 
+</style>
+</head>
+<body>
 <h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
   <p> This the link to my remake of cookie clicker</p>
