--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-   background-image: url("https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg");
+   background-image: url("/img/bgBlue.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
