--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <style>
 body {
    background-image: url("/img/bgBlue.jpg");
+   background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
