--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <style>
-body {
+body 
+   {
    background-image: url("/img/bgBlue.jpg");
    background-position: center;
    background-repeat: no-repeat;
