--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body 
-   {
-   background-image: url("/img/bgBlue.jpg");
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-attachment: fixed;
-} 
-</style>
-</head>
-<body>
+<body style="background-image: url('https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg?raw=true');">
 <h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
   <p> This the link to my remake of cookie clicker</p>
