--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
   <p> This the link to my remake of cookie clicker</p>
-<a href="https://funneljai212.github.io/cookie_clicker_2.048/">
+<a href="https://funneljai212.github.io/cookie_clicker_2.048/"target="_blank">
   <button style="color:Tomato;">Cookie clicker website</button>
 </a>
 <p> This the link to my remake of a gameboy advance website</p>
-  <a href="https://funneljai1.github.io/gba/">
+  <a href="https://funneljai1.github.io/gba/"target="_blank">
   <button style="color:DodgerBlue;"> GBA website</button>
 </a>
 </body>
