--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
+<style>
+.button {
+  border: none;
+  color: transparent;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {background-color: transparent;} /* Green */
+.button2 {background-color: transparent;} /* Blue */
+</style>
 <body style="background-image: url('https://github.com/jelly-truc/code/blob/main/img/bgBlue.jpg?raw=true');">
 <h1> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <p>  This is the hub for websites that I have republished and Mods I made for Minecraft Bedrock Edition.</p>
-  <p> This the link to my remake of cookie clicker</p>
-<a href="https://funneljai212.github.io/cookie_clicker_2.048/"target="_blank">
-  <button style="color:Tomato;">Cookie clicker website</button>
-</a>
-<p> This the link to my remake of a gameboy advance website</p>
-  <a href="https://funneljai1.github.io/gba/"target="_blank">
-  <button style="color:DodgerBlue;"> GBA website</button>
-</a>
+  <p> This is the list of my website remakes</p>
+<li><a href="https://funneljai212.github.io/cookie_clicker_2.048/"target="_blank">
+  <button class="button button1" style="color:Tomato;">Cookie clicker website</button></a></li>
+<li><a href="https://funneljai1.github.io/gba/"target="_blank">
+  <button class="button button2" style="color:Tomato;"> GBA website</button></a></li>
 </body>
 </html>
