--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
+<script type="text/javascript" src="main.js"></script>
 </head>
-<body>
-<div class="navbar">
+<body id=body>
+  <div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">links
@@ -14,6 +15,18 @@
     <div class="dropdown-content">
       <a href="mods.html">mods</a>
       <a href="websites.html">websites</a>
+  </div>
+ </div>
+ <div class="dropdown">
+    <button class="dropbtn">backgrounds
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a onclick="gold()">gold</a>
+      <a onclick="blue()">blue</a>
+      <a onclick="red()">red</a>
+      <a onclick="white()">white</a>
+      <a onclick="black()">black</a>
   </div>
  </div>
 </div>
