--- a/mods.html
+++ b/mods.html
@@ -3,8 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
+<script type="text/javascript" src="main.js"></script>
 </head>
-<body>
+<body id="body">
 <div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
@@ -14,10 +15,25 @@
     <div class="dropdown-content">
       <a href="mods.html">mods</a>
       <a href="websites.html">websites</a>
-    </div>
   </div>
+ </div>
+ <div class="dropdown">
+    <button class="dropbtn">backgrounds
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a onclick="gold()">gold</a>
+      <a onclick="blue()">blue</a>
+      <a onclick="red()">red</a>
+      <a onclick="white()">white</a>
+      <a onclick="black()">black</a>
+  </div>
+ </div>
 </div>
 <h1> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
-<p style="color:rgba(43, 249, 33);"> Sorry but right now this site has no content for this page.</p>
+<p style="color:rgba(43, 249, 33);">
+</p>
+<li><a href="assets/mods/Mo' Music Discs v1.mcaddon" target="_blank">
+  <button class="button button1" style="color:rgba(43, 249, 33);">custom musics disc download</button></a></li>
 </body>
 </html>
