--- a/websites.html
+++ b/websites.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
-<body>
-  <div class="navbar">
+<script type="text/javascript" src="main.js"></script>
+</head>
+<body id="body">
+<div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">links
@@ -12,14 +15,25 @@
     <div class="dropdown-content">
       <a href="mods.html">mods</a>
       <a href="websites.html">websites</a>
-    </div>
   </div>
+ </div>
+ <div class="dropdown">
+    <button class="dropbtn">backgrounds
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a onclick="gold()">gold</a>
+      <a onclick="blue()">blue</a>
+      <a onclick="red()">red</a>
+      <a onclick="white()">white</a>
+      <a onclick="black()">black</a>
+  </div>
+ </div>
 </div>
-
 <h1> This is the list of my website remakes</h1>
 <li><a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Cookie clicker website</button></a></li>
 <li><a href="https://funneljai1.github.io/gba/" target="_blank">
   <button class="button button2" style="color:rgba(43, 249, 33);"> GBA website</button></a></li>
-  </body>
+</body>
 </html>
