--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   </div>
  </div>
 </div>
-<h1 onclick="h1()"> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
+<h1 style="color:Tomato;"> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 </body>
 </html>
