--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
  </div>
 </div>
 <h1 style="color:Tomato;" onclick="bye()"> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
+<audio loop autoplay>
+<source src="anti.mp3" type="audio/mp3">
+</audio>
 </body>
 </html>
