--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 <h1 style="color:Tomato;" onclick="bye()"> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
 <audio loop autoplay>
-<source src="anti.mp3" type="audio/mp3">
+<source src="anti.ogg" type="audio/ogg">
 </audio>
 </body>
 </html>
