--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html onload="b()">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
 <script type="text/javascript" src="main.js"></script>
 </head>
-<body id=body onload="b()">
+<body id=body>
   <div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
