--- a/websites.html
+++ b/websites.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html onload="b()">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
