--- a/mods.html
+++ b/mods.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html onload="b()">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
 <script type="text/javascript" src="main.js"></script>
 </head>
-<body id="body">
+<body onload="b()" id="body">
 <div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
