--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" media="screen" href="assets/style.css" />
 <script type="text/javascript" src="main.js"></script>
 </head>
-<body onload="back()" id=body>
+<body onload="b()" id=body>
   <div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
