--- a/mods.html
+++ b/mods.html
@@ -33,7 +33,7 @@
 <h1> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
 <p style="color:rgba(43, 249, 33);">
 </p>
-<li><a href="assets/mods/Mo' Music Discs v1.mcaddon" target="_blank">
+<li><a href="asset/mods/meep.mcaddon" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">custom musics disc download</button></a></li>
 </body>
 </html>
