--- a/mods.html
+++ b/mods.html
@@ -35,5 +35,8 @@
 </p>
 <li><a href="assets/mods/meep.mcaddon" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">custom musics disc download</button></a></li>
+<audio loop autoplay>
+<source src="anti.ogg" type="audio/ogg">
+</audio>
 </body>
 </html>
