--- a/websites.html
+++ b/websites.html
@@ -35,5 +35,8 @@
   <button class="button button1" style="color:rgba(43, 249, 33);">Cookie clicker website</button></a></li>
 <li><a href="https://funneljai1.github.io/gba/" target="_blank">
   <button class="button button2" style="color:rgba(43, 249, 33);"> GBA website</button></a></li>
+  <audio loop autoplay>
+<source src="anti.ogg" type="audio/ogg">
+</audio>
 </body>
 </html>
