--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a onclick="gold()">gold</a>
-      <a onclick="blue()">blue</a>
-      <a onclick="red()">red</a>
+      <a id="gd" onclick="gold()">gold</a>
+      <a id="be" onclick="blue()">blue</a>
+      <a id="rd" onclick="red()">red</a>
       <a onclick="white()">white</a>
       <a onclick="black()">black</a>
   </div>
