--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <a id="gd" onclick="gold()">gold</a>
       <a id="be" onclick="blue()">blue</a>
       <a id="rd" onclick="red()">red</a>
-      <a onclick="white()">white</a>
-      <a onclick="black()">black</a>
+      <a id="we" onclick="white()">white</a>
+      <a id="bk" onclick="black()">black</a>
   </div>
  </div>
 </div>
