--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
 <script type="text/javascript" src="main.js"></script>
+<script>
+b();
+</script>
 </head>
 <body onload="b()" id=body>
   <div class="navbar">
