--- a/mods.html
+++ b/mods.html
@@ -45,7 +45,7 @@
 </p>
 <li><a href="assets/mods/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">custom musics disc download</button></a></li>
-<li><a href="assets/mods/skygen.zip" target="_blank">
+<li><a href="assets/mods/skygen.mcaddon" target="_blank">
 <button class="button button1" style="color:rgba(43, 249, 33);">funneljai's custom skygen setup</button></a></li>
 <audio loop autoplay>
 <source src="anti.ogg" type="audio/ogg">
