--- a/mods.html
+++ b/mods.html
@@ -46,7 +46,9 @@
 <li><a href="assets/mods/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">custom musics disc download</button></a></li>
 <li><a href="assets/mods/Archive.mcaddon" target="_blank">
-<button class="button button1" style="color:rgba(43, 249, 33);">funneljai's custom skygen setup</button></a></li>
+ <button class="button button1" style="color:rgba(43, 249, 33);">funneljai's custom skygen setup</button></a></li>
+<li><a href="gm.js" target="_blank">
+<button class="button button1" style="color:rgba(43, 249, 33);">gm.js</button></a></li>
 <audio loop autoplay>
 <source src="anti.ogg" type="audio/ogg">
 </audio>
