--- a/websites.html
+++ b/websites.html
@@ -29,12 +29,15 @@
       <a onclick="black()">black</a>
   </div>
  </div>
+  <a href="assets/extra/Tetris_Rom.nes">Tetris Rom</a>
 </div>
-<h1> This is the list of my website remakes</h1>
+<h1> This is the list of my website remakes and links to some other websites that can be used for fun.</h1>
 <li><a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Cookie clicker website</button></a></li>
 <li><a href="https://funneljai1.github.io/gba/" target="_blank">
   <button class="button button2" style="color:rgba(43, 249, 33);"> GBA website</button></a></li>
+  <li><a href="https://koute.github.io/pinky-web/" target="_blank">
+  <button class="button button1" style="color:rgba(43, 249, 33);">Nes Emulator Website</button></a></li>
   <audio loop autoplay>
 <source src="anti.ogg" type="audio/ogg">
 </audio>
