--- a/mods.html
+++ b/mods.html
@@ -45,6 +45,8 @@
 </p>
 <li><a href="assets/mods/Side_Test.mcaddon" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Custom Commands</button></a></li>
+<li><a href="assets/mods/Fantasy_orefix.mcaddon" target="_blank">
+  <button class="button button1" style="color:rgba(43, 249, 33);">Fantasy Ores Fix.(in-progress)</button></a></li>
 <li><a href="assets/mods/Archive.mcaddon" target="_blank">
  <button class="button button1" style="color:rgba(43, 249, 33);">funneljai's custom skygen setup</button></a></li>
 <audio loop autoplay>
