--- a/websites.html
+++ b/websites.html
@@ -36,8 +36,10 @@
   <button class="button button1" style="color:rgba(43, 249, 33);">Cookie clicker website</button></a></li>
 <li><a href="https://funneljai1.github.io/gba/" target="_blank">
   <button class="button button2" style="color:rgba(43, 249, 33);"> GBA website</button></a></li>
-  <li><a href="https://koute.github.io/pinky-web/" target="_blank">
+<li><a href="https://koute.github.io/pinky-web/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Nes Emulator Website</button></a></li>
+<li><a href="https://bridge-core.app/" target="_blank">
+  <button class="button button1" style="color:rgba(43, 249, 33);">Bridge Editor(click open web app to start coding)</button></a></li>
   <audio loop autoplay>
 <source src="anti.ogg" type="audio/ogg">
 </audio>
