--- a/mods.html
+++ b/mods.html
@@ -43,7 +43,7 @@
 <h1> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
 <p style="color:rgba(43, 249, 33);">
 </p>
-<li><a href="assets/mods/Side_Test.mcaddon" target="_blank">
+<li><a href="assets/mods/Side_test.mcaddon" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Custom Commands</button></a></li>
 <li><a href="assets/mods/Fantasy_orefix.mcaddon" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Fantasy Ores Fix.(in-progress)</button></a></li>
