--- a/websites.html
+++ b/websites.html
@@ -33,6 +33,8 @@
 <h1> This is the list of my website remakes and links to some other websites that can be used for fun.</h1>
 <li><a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Cookie clicker website</button></a></li>
+<li><a href="https://sparticle999.github.io/SpaceCompany/" target="_blank">
+  <button class="button button1" style="color:rgba(43, 249, 33);">Space Company Game</button></a></li>
 <li><a href="https://funneljai1.github.io/gba/" target="_blank">
   <button class="button button2" style="color:rgba(43, 249, 33);"> GBA website</button></a></li>
 <li><a href="https://koute.github.io/pinky-web/" target="_blank">
