--- a/websites.html
+++ b/websites.html
@@ -14,6 +14,7 @@
     </button>
     <div class="dropdown-content">
       <a href="mods.html">mods</a>
+      <a href="social.html">socials</a>
   </div>
  </div>
  <div class="dropdown">
@@ -30,7 +31,7 @@
  </div>
   <a href="assets/extra/Tetris_Rom.nes">Tetris Rom</a>
 </div>
-<h1> This is the list of my website remakes and links to some other websites that can be used for fun.</h1>
+<h1 id="h1" style="color:Tomato;"> This is the list of my website remakes and links to some other websites that can be used for fun.</h1>
 <li><a href="https://funneljai212.github.io/cookie_clicker_2.048/" target="_blank">
   <button class="button button1" style="color:rgba(43, 249, 33);">Cookie clicker website</button></a></li>
 <li><a href="https://sparticle999.github.io/SpaceCompany/" target="_blank">
