--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="dropdown-content">
       <a id="ms" href="mods.html">mods</a>
       <a id="ws" href="websites.html">websites</a>
+      <a id="sl" href="social.html">socials</a>
   </div>
  </div>
  <div class="dropdown">
