--- a/mods.html
+++ b/mods.html
@@ -14,6 +14,7 @@
     </button>
     <div class="dropdown-content">
       <a id="ws" href="websites.html">websites</a>
+      <a id="sl" href="social.html">socials</a>
   </div>
  </div>
  <div class="dropdown">
@@ -39,7 +40,7 @@
   </div>
  </div>
 </div>
-<h1> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
+<h1 id="h1" style="color:Tomato;"> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
 <p style="color:rgba(43, 249, 33);">
 </p>
 <li><a href="assets/mods/Side_test.mcaddon" target="_blank">
