--- a/mods.html
+++ b/mods.html
@@ -39,6 +39,7 @@
       <a id="jp" onclick="JP()">JP</a>
   </div>
  </div>
+    <a id="MCC" onclick="clr()">Minecraft Color Coder</a>
 </div>
 <h1 id="h1" style="color:Tomato;"> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
 <p style="color:rgba(43, 249, 33);">
