--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" media="screen" href="assets/style.css" />
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="./main.js"></script>
 </head>
-<body id="body" onload="b()">
+<body id="body" onload="b()" onclick="grab()">
   <div class="navbar">
   <a id="home" href="index.html">Home</a>
   <div class="dropdown">
