--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" media="screen" href="assets/style.css" />
 <script type="text/javascript" src="./main.js"></script>
 </head>
-<body id="body" onload="b()" onclick="grab()">
+<body id="body" onload="b()">
   <div class="navbar">
   <a id="home" href="index.html">Home</a>
   <div class="dropdown">
