--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
   </div>
  </div>
 </div>
-<h1 id="h1" style="color:Tomato;"> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai</h1>
-<audio loop autoplay>
-<source src="anti.ogg" type="audio/ogg">
-</audio>
+<h1 id="h1" style="color:Tomato;"> This is the hub for mods made for Minecraft Bedrock Edition and website remakes by Funneljai.</h1>
 </body>
 </html>
