--- a/mods.html
+++ b/mods.html
@@ -44,8 +44,8 @@
 <h1 id="h1" style="color:Tomato;"> This is the list of mods made by Funneljai for Minecraft Bedrock Edition.</h1>
 <p style="color:rgba(43, 249, 33);">
 </p>
-<li><a href="assets/mods/Side_test.mcaddon" target="_blank">
-  <button class="button button1" style="color:rgba(43, 249, 33);">Custom Commands.(Discontinued)</button></a></li>
+<li><a href="assets/mods/GM Commands.mcaddon" target="_blank">
+  <button class="button button1" style="color:rgba(43, 249, 33);">Custom Commands.</button></a></li>
 <li><a href="assets/mods/Archive.mcaddon" target="_blank">
  <button class="button button1" style="color:rgba(43, 249, 33);">funneljai's custom skygen setup.(Discontinued)</button></a></li>
 <audio loop autoplay>
@@ -53,3 +53,4 @@
 </audio>
 </body>
 </html>
+
